// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a single image properly 1`] = `
.c10 {
  margin-right: 30px;
}

.c11 {
  white-space: nowrap;
}

.c9 {
  padding: 0;
  margin-top: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 a {
  color: #C2C2C2;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c9 .title,
.c9 .title a {
  font-style: italic;
}

.c8 {
  position: absolute;
  bottom: 0;
  right: 0;
  margin: 10px;
  width: 25px;
  height: 25px;
  cursor: pointer;
  opacity: 0.6;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c8:hover {
  opacity: 1;
}

.c7 {
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c4 {
  position: relative;
}

.c4:hover .c6 {
  opacity: 1;
}

.c4 .BlockImage__container {
  opacity: 0;
  -webkit-transition: opacity 1s;
  transition: opacity 1s;
}

.c4 .image-loaded {
  opacity: 1;
}

.c5 {
  display: block;
}

.c3 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  margin-right: 0px;
  width: 100%;
}

@media (max-width:600px) {
  .c9 {
    padding: 0 10px;
  }
}

@media (max-width:720px) {
  .c4 .c6 {
    opacity: 1;
  }
}

@media (max-width:600px) {
  .c0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (max-width:600px) {
  .c1 {
    margin-bottom: 10px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <a
        className="c3"
        href="/artwork/fernando-botero-nude-on-the-beach"
      >
        <div
          className="c4"
        >
          <img
            alt="Nude on the Beach"
            className="BlockImage__container c5"
            height="auto"
            src="https://d7hftxdivxxvm.cloudfront.net?resize_to=width&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2F0aRUvnVgQKbQk5dj8xcCAg%2Flarger.jpg&width=1200&quality=80"
            width="100%"
          />
          <div
            className="c6 c7"
          >
            <div
              className="c8"
              onClick={[Function]}
            >
              <svg
                className="expand"
                version="1.1"
                viewBox="0 0 27 27"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  fillRule="evenodd"
                  stroke="none"
                  strokeWidth="1"
                >
                  <g>
                    <circle
                      cx="13.9575195"
                      cy="13.0588379"
                      fill="#000000"
                      fillRule="nonzero"
                      r="13"
                    />
                    <g
                      stroke="#FFFFFF"
                      transform="translate(8.000000, 7.000000)"
                    >
                      <g>
                        <g
                          transform="translate(0.382532, 0.382532)"
                        >
                          <polyline
                            points="4.78165571 0 11.1571966 0 11.1571966 6.37554094"
                          />
                          <polyline
                            points="-1.01881144e-06 4.78165537 6.37553992 4.78165537 6.37553992 11.1571963"
                            transform="translate(3.187769, 7.969426) rotate(-180.000000) translate(-3.187769, -7.969426) "
                          />
                          <path
                            d="M10.360254,0.796942618 L0.796942618,10.360254"
                            strokeLinecap="square"
                          />
                        </g>
                      </g>
                    </g>
                  </g>
                </g>
              </svg>
            </div>
          </div>
        </div>
      </a>
      <div>
        <div
          className="c9 sc-bZQynM bOrPFB sc-EHOje eiIllQ"
          color="#C2C2C2"
          fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
          fontSize="14px"
        >
          <span
            className="c10"
          >
            <span
              className="c11"
            >
              <a
                href="/artist/fernando-botero"
              >
                Fernando Botero
              </a>
            </span>
          </span>
          <div>
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": <span>
                    <span
                      className="title"
                    >
                      <a
                        href="/artwork/fernando-botero-nude-on-the-beach"
                      >
                        Nude on the Beach
                      </a>
                    </span>
                    <span>
                      , 
                    </span>
                    <span
                      className="date"
                    >
                      2000
                    </span>
                  </span>,
                }
              }
            />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": <span>
                    <a
                      href="/gary-nader"
                    >
                      Gary Nader
                    </a>
                    <span>
                      . 
                    </span>
                    <span
                      className="credit"
                    >
                      Courtesy of Gary Nader
                    </span>
                  </span>,
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders properly 1`] = `
.c10 {
  margin-right: 30px;
}

.c11 {
  white-space: nowrap;
}

.c9 {
  padding: 0;
  margin-top: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 a {
  color: #C2C2C2;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c9 .title,
.c9 .title a {
  font-style: italic;
}

.c8 {
  position: absolute;
  bottom: 0;
  right: 0;
  margin: 10px;
  width: 25px;
  height: 25px;
  cursor: pointer;
  opacity: 0.6;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c8:hover {
  opacity: 1;
}

.c7 {
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c4 {
  position: relative;
}

.c4:hover .c6 {
  opacity: 1;
}

.c4 .BlockImage__container {
  opacity: 0;
  -webkit-transition: opacity 1s;
  transition: opacity 1s;
}

.c4 .image-loaded {
  opacity: 1;
}

.c5 {
  display: block;
}

.c3 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 10px 0 10px 0;
}

.c14 {
  padding: 0;
  width: 100%;
  word-break: break-word;
}

.c14 > p,
.c14 p,
.c14 .public-DraftEditorPlaceholder-root,
.c14 .public-DraftStyleDefault-block {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 14px;
  line-height: 1.4em;
  color: #999;
  margin: 0;
}

.c14 > a,
.c14 a {
  color: #999;
}

.c14 > a:hover,
.c14 a:hover {
  color: black;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  margin-right: 10px;
  width: 312px;
}

.c12 {
  margin-right: 10px;
  width: 168px;
}

.c15 {
  margin-right: 0px;
  width: 178px;
}

@media (max-width:600px) {
  .c9 {
    padding: 0 10px;
  }
}

@media (max-width:720px) {
  .c4 .c6 {
    opacity: 1;
  }
}

@media (max-width:600px) {
  .c13 {
    padding: 0px 10px;
  }
}

@media (max-width:600px) {
  .c14 {
    padding: 0px;
  }
}

@media (max-width:600px) {
  .c0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (max-width:600px) {
  .c1 {
    margin-bottom: 10px;
  }
}

@media (max-width:600px) {
  .c12 {
    margin-bottom: 10px;
  }
}

@media (max-width:600px) {
  .c15 {
    margin-bottom: 10px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    width={312}
  >
    <div
      className="c2"
    >
      <a
        className="c3"
        href="/artwork/fernando-botero-nude-on-the-beach"
      >
        <div
          className="c4"
        >
          <img
            alt="Nude on the Beach"
            className="BlockImage__container c5"
            height={224}
            src="https://d7hftxdivxxvm.cloudfront.net?resize_to=width&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2F0aRUvnVgQKbQk5dj8xcCAg%2Flarger.jpg&width=1200&quality=80"
            width={312}
          />
          <div
            className="c6 c7"
          >
            <div
              className="c8"
              onClick={[Function]}
            >
              <svg
                className="expand"
                version="1.1"
                viewBox="0 0 27 27"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  fillRule="evenodd"
                  stroke="none"
                  strokeWidth="1"
                >
                  <g>
                    <circle
                      cx="13.9575195"
                      cy="13.0588379"
                      fill="#000000"
                      fillRule="nonzero"
                      r="13"
                    />
                    <g
                      stroke="#FFFFFF"
                      transform="translate(8.000000, 7.000000)"
                    >
                      <g>
                        <g
                          transform="translate(0.382532, 0.382532)"
                        >
                          <polyline
                            points="4.78165571 0 11.1571966 0 11.1571966 6.37554094"
                          />
                          <polyline
                            points="-1.01881144e-06 4.78165537 6.37553992 4.78165537 6.37553992 11.1571963"
                            transform="translate(3.187769, 7.969426) rotate(-180.000000) translate(-3.187769, -7.969426) "
                          />
                          <path
                            d="M10.360254,0.796942618 L0.796942618,10.360254"
                            strokeLinecap="square"
                          />
                        </g>
                      </g>
                    </g>
                  </g>
                </g>
              </svg>
            </div>
          </div>
        </div>
      </a>
      <div>
        <div
          className="c9 sc-bZQynM bOrPFB sc-EHOje eiIllQ"
          color="#C2C2C2"
          fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
          fontSize="14px"
        >
          <span
            className="c10"
          >
            <span
              className="c11"
            >
              <a
                href="/artist/fernando-botero"
              >
                Fernando Botero
              </a>
            </span>
          </span>
          <div>
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": <span>
                    <span
                      className="title"
                    >
                      <a
                        href="/artwork/fernando-botero-nude-on-the-beach"
                      >
                        Nude on the Beach
                      </a>
                    </span>
                    <span>
                      , 
                    </span>
                    <span
                      className="date"
                    >
                      2000
                    </span>
                  </span>,
                }
              }
            />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": <span>
                    <a
                      href="/gary-nader"
                    >
                      Gary Nader
                    </a>
                    <span>
                      . 
                    </span>
                    <span
                      className="credit"
                    >
                      Courtesy of Gary Nader
                    </span>
                  </span>,
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c12"
    width={168}
  >
    <div
      className="article-image"
    >
      <div
        className="c4"
      >
        <img
          alt="Photo by Adam Kuehl for Artsy."
          className="BlockImage__container c5"
          height={224}
          src="https://d7hftxdivxxvm.cloudfront.net?resize_to=width&src=https%3A%2F%2Fartsy-media-uploads.s3.amazonaws.com%2Fco8j2xq40ROMyBrJQm_4eQ%252FDafenOilPaintingVillage_AK03.jpg&width=1200&quality=80"
          width={168}
        />
        <div
          className="c6 c7"
        >
          <div
            className="c8"
            onClick={[Function]}
          >
            <svg
              className="expand"
              version="1.1"
              viewBox="0 0 27 27"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="none"
                fillRule="evenodd"
                stroke="none"
                strokeWidth="1"
              >
                <g>
                  <circle
                    cx="13.9575195"
                    cy="13.0588379"
                    fill="#000000"
                    fillRule="nonzero"
                    r="13"
                  />
                  <g
                    stroke="#FFFFFF"
                    transform="translate(8.000000, 7.000000)"
                  >
                    <g>
                      <g
                        transform="translate(0.382532, 0.382532)"
                      >
                        <polyline
                          points="4.78165571 0 11.1571966 0 11.1571966 6.37554094"
                        />
                        <polyline
                          points="-1.01881144e-06 4.78165537 6.37553992 4.78165537 6.37553992 11.1571963"
                          transform="translate(3.187769, 7.969426) rotate(-180.000000) translate(-3.187769, -7.969426) "
                        />
                        <path
                          d="M10.360254,0.796942618 L0.796942618,10.360254"
                          strokeLinecap="square"
                        />
                      </g>
                    </g>
                  </g>
                </g>
              </g>
            </svg>
          </div>
        </div>
      </div>
      <div
        className="c13"
      >
        <div
          className="c14"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p>Photo by Adam Kuehl for Artsy.</p>",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="c15"
    width={178}
  >
    <div
      className="article-image"
    >
      <div
        className="c4"
      >
        <img
          alt="Photo by Adam Kuehl for Artsy. Image courtesy of the Guggenheim Museum."
          className="BlockImage__container c5"
          height={224}
          src="https://d7hftxdivxxvm.cloudfront.net?resize_to=width&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2FCpHY-DRr7KW0HGXLslCXHw%2Flarger.jpg&width=1200&quality=80"
          width={178}
        />
        <div
          className="c6 c7"
        >
          <div
            className="c8"
            onClick={[Function]}
          >
            <svg
              className="expand"
              version="1.1"
              viewBox="0 0 27 27"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="none"
                fillRule="evenodd"
                stroke="none"
                strokeWidth="1"
              >
                <g>
                  <circle
                    cx="13.9575195"
                    cy="13.0588379"
                    fill="#000000"
                    fillRule="nonzero"
                    r="13"
                  />
                  <g
                    stroke="#FFFFFF"
                    transform="translate(8.000000, 7.000000)"
                  >
                    <g>
                      <g
                        transform="translate(0.382532, 0.382532)"
                      >
                        <polyline
                          points="4.78165571 0 11.1571966 0 11.1571966 6.37554094"
                        />
                        <polyline
                          points="-1.01881144e-06 4.78165537 6.37553992 4.78165537 6.37553992 11.1571963"
                          transform="translate(3.187769, 7.969426) rotate(-180.000000) translate(-3.187769, -7.969426) "
                        />
                        <path
                          d="M10.360254,0.796942618 L0.796942618,10.360254"
                          strokeLinecap="square"
                        />
                      </g>
                    </g>
                  </g>
                </g>
              </g>
            </svg>
          </div>
        </div>
      </div>
      <div
        className="c13"
      >
        <div
          className="c14"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p>Photo by <a href='artsy.net'>Adam Kuehl</a> for Artsy. Image courtesy of the Guggenheim Museum.</p>",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
